--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ console.log(JSON.parse(degree))
             <div class="slideshow-container"></div>
             <div class="img-slide">
 
-                <img src="images/510_Hiker.jpg" alt="510 Hiker in Lake Tahoe" >
+                <img src="images/510_Hiker.jpg" alt="510 Hiker in Lake Tahoe"  width="900px" height="600px">
             </div>
             <br>
             </div>
@@ -241,17 +241,17 @@ console.log(JSON.parse(degree))
             
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
-                        <img src="images/header.jpeg" alt=" 510 hikers" >
+                        <img src="images/header.jpeg" alt=" 510 hikers"  width="900px" height="600px">
                     <div class="text">Sunset at Berkeley Marina</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
-                    <img src="images/hike3.JPG" alt=" 510 hikers" >
+                    <img src="images/hike3.JPG" alt=" 510 hikers"  width="900px" height="600px">
                     <div class="text">Lake Tahoe view</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
-                    <img src="images/hike2.jpeg" alt=" 510 hikers" >
+                    <img src="images/hike2.jpeg" alt=" 510 hikers"  width="900px" height="600px">
                     <div class="text">Purisima Creek Redwoods</div>
                 </div>
                 <br>
@@ -301,6 +301,7 @@ console.log(JSON.parse(degree))
         
         </div>
     </div>
+     <p><a href="#top">Top</a></p>
 </div>
 <!--js for slide images try-->
 <script>
