--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ console.log(JSON.parse(degree))
             <span class="dot" onclick="currentSlide(3)"></span>
 
         </div>
-        <script src="JS"/slide-image.js></script>
+        <script src="JS/slide-image.js"></script>
         
      
     </div>
