--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@ console.log(JSON.parse(degree))
     <!-- About Section-->
     <div id="about">
         <div class="container">
+            // adding a calacute age fucntion basic one 
+            <div>
+                <h1>Calacute Your Age</h1>
+                <div id="calculate">Calculate Your age!</div>
+                <script src="JS/calculate-age"></script>
+            </div>
             <div class="row">
                 <div class="about-colom-1">
                     <!-- this will be to add the the pictures-->
