--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@ console.log(JSON.parse(degree))
                 <p>I am an aspiring Software Engineer. <br>
                     Looking for internships and work opportunities.</p>  
                 </div>
+                <div class="file">
+                    <a href="https://www.linkedin.com/in/asmayt-zeru-9b26a2193/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/asmaytz"><i class="fa-brands fa-github"></i></a>
+                    <a href="images/Asmayt Zeru ResumeSDpdf.pdf" download class="btn resume"> Resume</a>
+                </div>
             </div>
         </div>
     </div>
